Write a basic contract test without externalised examples

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
 			<artifactId>kotlin-test-junit5</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>in.specmatic</groupId>
+			<artifactId>specmatic-grpc</artifactId>
+			<version>0.0.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
