Package grpc trial jar

--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,9 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
-	testImplementation 'in.specmatic:specmatic-grpc:0.0.1'
+//	testImplementation 'in.specmatic:specmatic-grpc:0.0.1'
+//	testImplementation(files("lib/specmatic-grpc.jar"))
+	testImplementation(files("lib/specmatic-grpc-0.0.1.jar"))
 
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
