--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     compileOnly 'jakarta.annotation:jakarta.annotation-api:1.3.5' // Java 9+ compatibility - Do NOT update to 2.0.0
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'in.specmatic:specmatic-grpc:0.0.1'
+    testImplementation 'in.specmatic:specmatic-grpc:0.0.1-TRIAL'
 }
 
 protobuf {
