--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ import org.gradle.plugins.ide.eclipse.model.SourceFolder
 buildscript {
     ext {
         protobufVersion = '3.23.4'
-        protobufPluginVersion = '0.8.18'
+        protobufPluginVersion = '0.9.4'
         grpcVersion = '1.63.0'
         springBootVersion = '3.3.1'
         springBootGrpcVersion = '3.1.0.RELEASE'
@@ -20,7 +20,7 @@ plugins {
     id 'org.springframework.boot' version "${springBootVersion}"
     id 'com.google.protobuf' version "${protobufPluginVersion}"
     id 'io.spring.dependency-management' version '1.1.5'
-    id 'org.jetbrains.kotlin.jvm' version '1.9.24'
+    id 'org.jetbrains.kotlin.jvm' version '2.0.0'
     id 'org.jetbrains.kotlin.plugin.spring' version '1.9.24'
 }
 
@@ -40,7 +40,10 @@ dependencies {
     implementation "io.grpc:grpc-stub:${grpcVersion}"
 
     implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation "net.devh:grpc-server-spring-boot-starter:${springBootGrpcVersion}"
+    implementation 'org.jetbrains.kotlin:kotlin-reflect'
+    implementation "build.buf:protovalidate:0.2.1"
 
     compileOnly 'jakarta.annotation:jakarta.annotation-api:1.3.5' // Java 9+ compatibility - Do NOT update to 2.0.0
 
@@ -81,12 +84,12 @@ tasks.named('test') {
 eclipse {
     classpath {
         file.beforeMerged { cp ->
-            def generatedGrpcFolder = new SourceFolder('src/generated/main/grpc', null);
-            generatedGrpcFolder.entryAttributes['ignore_optional_problems'] = 'true';
-            cp.entries.add(generatedGrpcFolder);
-            def generatedJavaFolder = new SourceFolder('src/generated/main/java', null);
-            generatedJavaFolder.entryAttributes['ignore_optional_problems'] = 'true';
-            cp.entries.add(generatedJavaFolder);
+            def generatedGrpcFolder = new SourceFolder('src/generated/main/grpc', null)
+            generatedGrpcFolder.entryAttributes['ignore_optional_problems'] = 'true'
+            cp.entries.add(generatedGrpcFolder)
+            def generatedJavaFolder = new SourceFolder('src/generated/main/java', null)
+            generatedJavaFolder.entryAttributes['ignore_optional_problems'] = 'true'
+            cp.entries.add(generatedJavaFolder)
         }
     }
 }
@@ -97,5 +100,24 @@ idea {
         sourceDirs += file("src/generated/main/grpc")
         generatedSourceDirs += file("src/generated/main/java")
         generatedSourceDirs += file("src/generated/main/grpc")
+    }
+}
+
+
+test {
+    useJUnitPlatform()
+
+    testLogging {
+        events "passed", "skipped", "failed"
+        showStandardStreams = true
+        exceptionFormat = 'full'
+    }
+
+    afterSuite { desc, result ->
+        if (!desc.parent) {
+            println "-----------------------------------------------------"
+            println "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
+            println "-----------------------------------------------------"
+        }
     }
 }
