Update Specmatic-Grpc, Enable Resiliency Testing. - Remove Example Data - Remove Local Maven Repository

--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,14 @@ plugins {
 group = 'com.store'
 version = '0.0.1-SNAPSHOT'
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
 repositories {
     mavenCentral()
-    mavenLocal()
     maven {
         url uri('lib')
     }
