--- a/specmatic.yaml
+++ b/specmatic.yaml
@@ -1,6 +1,7 @@
 sources:
-  - provider: filesystem
+  - provider: git
+    repository: https://github.com/znsio/specmatic-order-contracts
+    branch: grpc-contracts
     test:
-      - src/main/proto/order.proto
-      - src/main/proto/product.proto
-
+      - in/specmatic/examples/store/order_api_grpc/order.proto
+      - in/specmatic/examples/store/order_api_grpc/product.proto
